<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FirstActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:paddingBottom="@dimen/default_indent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/default_indent">

            <ImageButton
                android:contentDescription="@string/content_decription_arrow_back"
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_black_24px"
                android:background="?selectableItemBackground"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_toolbar"
                android:textSize="20sp"
                android:layout_marginStart="31dp"/>

            <ImageButton
                android:contentDescription="@string/edit_button"
                android:id="@+id/main_edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/ic_edit_black_24px"
                android:background="?selectableItemBackground"/>

        </com.google.android.material.appbar.MaterialToolbar>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/default_indent"
            android:layout_marginEnd="@dimen/default_indent"
            style="@style/BaseTextViewStyle.CardProfile"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="@dimen/default_indent">

                <ImageView
                    android:contentDescription="@string/content_description_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:src="@drawable/img_profile_spechialist" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Base.Theme.Lesson_3_Fokin"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/num_of_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_indent"
                        android:text="@string/card_number"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/post"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_indent"
                        android:text="@string/post"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_indent">

            <TextView
                android:id="@+id/title_list_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:text="@string/title_personal_info"
                style="@style/BaseTextViewStyle.TitleInfo"/>

            <include
                layout="@layout/view_person_param"
                android:id="@+id/view_person_param_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include
                layout="@layout/view_person_param"
                android:id="@+id/view_person_param_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include
                layout="@layout/view_person_param"
                android:id="@+id/view_person_param_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <include
                layout="@layout/view_person_param"
                android:id="@+id/view_person_param_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <include
                layout="@layout/view_person_param"
                android:id="@+id/view_person_param_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/exit_acc_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:padding="@dimen/default_indent"
        android:stateListAnimator="@null"
        android:text="@string/log_out_of_your_account"
        app:icon="@drawable/ic_menu_exit" />

</LinearLayout>