<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ThirdActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingBottom="@dimen/default_indent">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/materialCardView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        style="@style/BaseTextViewStyle.CardProfile"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/toolbar">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:padding="@dimen/default_indent">

                            <ImageView
                                android:id="@+id/img_avatar"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:contentDescription="@string/content_description_avatar"
                                android:src="@drawable/img_profile_spechialist"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:id="@+id/constraintLayout"
                                style="@style/Base.Theme.Lesson_3_Fokin"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintLeft_toRightOf="@id/img_avatar"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.6">

                                <TextView
                                    android:id="@+id/num_of_card"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/default_indent"
                                    android:text="@string/card_number"
                                    android:textSize="20sp"
                                    app:layout_constraintLeft_toLeftOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <TextView
                                    android:id="@+id/post"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/default_indent"
                                    android:text="@string/post"
                                    android:textSize="20sp"
                                    app:layout_constraintLeft_toLeftOf="parent"
                                    app:layout_constraintLeft_toRightOf="parent"
                                    app:layout_constraintTop_toBottomOf="@id/num_of_card" />
                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/default_indent"
                        app:layout_collapseMode="pin"
                        app:layout_constraintBottom_toTopOf="@+id/materialCardView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_chainStyle="packed"
                        app:popupTheme="@style/BaseTextViewStyle">

                        <ImageButton
                            android:id="@+id/back_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?selectableItemBackground"
                            android:contentDescription="@string/content_decription_arrow_back"
                            android:src="@drawable/ic_arrow_back_black_24px" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="31dp"
                            android:text="@string/title_toolbar"
                            android:textSize="20sp" />

                        <ImageButton
                            android:id="@+id/main_edit_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:background="?selectableItemBackground"
                            android:contentDescription="@string/edit_button"
                            android:src="@drawable/ic_edit_black_24px" />
                    </androidx.appcompat.widget.Toolbar>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/default_indent">
                <TextView
                    android:id="@+id/title_list_info"
                    style="@style/BaseTextViewStyle.TitleInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_personal_info"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <include
                    android:id="@+id/view_person_param_name"
                    layout="@layout/view_person_param"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_indent"
                    android:layout_width="wrap_content" />

                <include
                    android:id="@+id/view_person_param_surname"
                    layout="@layout/view_person_param"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_indent"
                    android:layout_width="wrap_content"/>

                <include
                    android:id="@+id/view_person_param_email"
                    layout="@layout/view_person_param"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_indent"
                    android:layout_width="wrap_content"/>

                <include
                    android:id="@+id/view_person_param_login"
                    layout="@layout/view_person_param"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_indent"
                    android:layout_width="wrap_content" />

                <include
                    android:id="@+id/view_person_param_city"
                    layout="@layout/view_person_param"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_indent"
                    android:layout_width="wrap_content" />

                <TextView
                    android:id="@+id/big_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="35sp"
                    app:layout_constraintTop_toBottomOf="@+id/view_person_param_city"
                    android:text="ewvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/exit_acc_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    android:padding="@dimen/default_indent"
                    android:stateListAnimator="@null"
                    android:text="@string/log_out_of_your_account"
                    app:layout_constraintTop_toBottomOf="@id/nestedScrollView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:icon="@drawable/ic_menu_exit" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
